# st-zrt

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
bench/: Cargo.toml
bench-c/: Cargo.toml
bench-c/benches/: alloc_options.rs  concurrency.rs  crash_repro.rs  hf_resnet.rs  inference.rs  large.rs  runtime_shapes.rs  tail_latency.rs
bench-c/examples/: batch_probe.rs  hf_resnet_probe.rs  mem_probe.rs  mmap_initializer_probe.rs  native_alloc_lane.rs  profile_relay.rs  zc_repro.rs
bench-c/src/: lib.rs  models.rs  variant_c.rs
bench-c/tests/: diag.rs  loader.rs
bench-cpp/: ort_cpp_expert.cpp  run_ort_cpp_expert.sh
bench/benches/: copy.rs  hf_resnet.rs  inference.rs  relay_ort.rs
bench/examples/: hf_resnet_probe.rs  mem_probe.rs
bench/native_alloc/: malloc_counter.c  run_lane_alloc_trace.sh
bench/src/: lib.rs  micro.rs  models.rs  ort_default.rs  ort_expert.rs
bench/tools/: gen_models.py
codegen/: Cargo.toml
codegen/src/: main.rs
scripts/: benchmark-allocator-matrix.sh  benchmark-batching.sh  benchmark-lane-policy-sweep.sh  benchmark-mmap-initializer.sh  benchmark-relay-affinity.sh  benchmark-same-ort-cpp.sh  benchmark-vs-ort.sh  release-check.sh
st-zrt/: Cargo.toml  README.md
st-zrt-sys/: Cargo.toml  README.md  build.rs
st-zrt-sys/src/: generated.rs  lib.rs
st-zrt/examples/: basic_inference.rs  bert_cuda_probe.rs  cuda_inference.rs  custom_op.rs  ep_config.rs  mmap_initializer.rs  primed_lane.rs  sparse_tensor.rs
st-zrt/src/: allocator.rs  arena.rs  custom_ops.rs  element.rs  environment.rs  ep.rs  ep_device.rs  error.rs  initializer.rs  interop.rs  io_binding.rs  lib.rs  memory.rs  metadata.rs  model_editor.rs  prepacked.rs  run_options.rs  runtime.rs  serde_support.rs  session.rs  session_options.rs  tensor.rs  threading.rs  type_info.rs
st-zrt/tests/: async_run.rs  cuda_ep.rs  custom_op_run.rs  model_editor_compile.rs  model_editor_initializer.rs  model_editor_load.rs  model_editor_run.rs  model_editor_serialize.rs  ort_compat.rs  smoke.rs  threading.rs  zero_alloc.rs
st-zrt/tests/fixtures/: custom_relu.onnx  custom_relu_unshaped.onnx  gen_custom_relu.py
st-zrt/tests/fixtures/ort_compat/: NOTICE.md
